Memory leak in libGLdispatch
In __glDispatchMakeCurrent
, it allocates a __GLdispatchThreadStatePrivate
struct to keep track of whatever data libGLdispatch needs internally, which then gets freed in __glDispatchLoseCurrent
.
However, if the library gets unloaded while another thread still has a current context, then that other thread would never call __glDispatchLoseCurrent
, and so that memory leaks.